jetty probs